force-app/main/default/objects/Int_Facility__c/Int_Facility__c.object-meta.xml
<CustomObject>
    <description>Int Facility Object</description>
    <label>Int Facility</label>
    <nameField>
        <displayFormat>Fac-{0000000000}</displayFormat>
        <label>Facility Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Facilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>