force-app/main/default/objects/Int_Facility__c/fields/Commitence_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Commitence_Indicator__c</fullName>
    <description>Commitence Indicator</description>
    <label>Commitence Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>