force-app/main/default/objects/Int_Facility__c/fields/Credit_Conversion_Factor__c.field-meta.xml
<CustomField>
    <fullName>Credit_Conversion_Factor__c</fullName>
    <description>Credit Conversion Factor</description>
    <label>Credit Conversion Factor</label>
    <length>9</length>
    <type>Text</type>
</CustomField>