force-app/main/default/objects/Int_Facility__c/fields/Credit_Line_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Line_Amount__c</fullName>
    <description>Credit Line Amount</description>
    <label>Credit Line Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>