force-app/main/default/objects/Int_Facility__c/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <description>Currency Code</description>
    <label>Currency Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>