force-app/main/default/objects/Int_Facility__c/fields/Facility_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Facility_Activation_Date__c</fullName>
    <description>Facility Activation Date</description>
    <label>Facility Activation Date</label>
    <type>Date</type>
</CustomField>