force-app/main/default/objects/Int_Facility__c/fields/Facility_Deal_Date__c.field-meta.xml
<CustomField>
    <fullName>Facility_Deal_Date__c</fullName>
    <description>Facility Deal Date</description>
    <label>Facility Deal Date</label>
    <type>Date</type>
</CustomField>