force-app/main/default/objects/Int_Facility__c/fields/Facility_Drawn_Amount__c.field-meta.xml
<CustomField>
    <fullName>Facility_Drawn_Amount__c</fullName>
    <description>Facility Drawn Amount</description>
    <label>Facility Drawn Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>