force-app/main/default/objects/Int_Facility__c/fields/Facility_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Facility_Maturity_Date__c</fullName>
    <description>Facility Maturity  Date</description>
    <label>Facility Maturity  Date</label>
    <type>Date</type>
</CustomField>