force-app/main/default/objects/Int_Facility__c/fields/Facility_Notice_Period__c.field-meta.xml
<CustomField>
    <fullName>Facility_Notice_Period__c</fullName>
    <description>Facility Notice Period</description>
    <label>Facility Notice Period</label>
    <length>19</length>
    <type>Text</type>
</CustomField>