force-app/main/default/objects/Int_Facility__c/fields/Facility_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Facility_Notification_Date__c</fullName>
    <description>Facility Notification Date</description>
    <label>Facility Notification Date</label>
    <type>Date</type>
</CustomField>