force-app/main/default/objects/Int_Facility__c/fields/Facility_Revolving_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Facility_Revolving_Indicator__c</fullName>
    <description>Facility Revolving Indicator</description>
    <label>Facility Revolving Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>