force-app/main/default/objects/Int_Facility__c/fields/Facility_Type__c.field-meta.xml
<CustomField>
    <fullName>Facility_Type__c</fullName>
    <description>Facility Type</description>
    <label>Facility Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>