force-app/main/default/objects/Int_Facility__c/fields/Hyperion_Base_Entity__c.field-meta.xml
<CustomField>
    <fullName>Hyperion_Base_Entity__c</fullName>
    <description>Hyperion Base Entity</description>
    <label>Hyperion Base Entity</label>
    <length>10</length>
    <type>Text</type>
</CustomField>