force-app/main/default/objects/Int_Facility__c/fields/Revocable_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Revocable_Indicator__c</fullName>
    <description>Revocable Indicator</description>
    <label>Revocable Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>